# md2pdf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
md2pdf/: __init__.py  cli.py  core.py  gui.py  style.css
